--- a/ide/IDE/public/diagram.html
+++ b/ide/IDE/public/diagram.html
@@ -4,7 +4,8 @@
     <!--<link rel="stylesheet" type="text/css" href="stylesheet.css" />-->
     <link rel="stylesheet" type="text/css" href="diagramStyle.css" />
     <link rel="stylesheet" type="text/css" href="tooltipster.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    
+    <script src="../js/jquery.js"></script>
     <!-- tooltipster: for tooltippin -->
     <script type="text/javascript" src="js/diagram/jquery.tooltipster.min.js"></script>
     <!-- Raphael: for drawing -->
