Add scope docs to IDE documentation tab, update display of method parameters

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -402,12 +402,12 @@
 									<ul id="utilityDocs" class="subsections">
 									</ul>
 								</li>
-								<!--<li>
+								<li>
 									<input type="checkbox" class="docs" id="tit3">
-									<label for="tit3" class="docSectionHeader">Working with Sensors</label>
-									<ul class="subsections">
+									<label for="tit3" class="docSectionHeader">The Scope</label>
+									<ul id="scopeDocs" class="subsections">
 									</ul>
-								</li>-->
+								</li>
 							</ul>
 				       </div><!-- Xenomai --> 
 				    </div><!-- end Doc tab -->
