--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -402,12 +402,60 @@
 									<ul id="utilityDocs" class="subsections">
 									</ul>
 								</li>
-								<!--<li>
+								<li>
 									<input type="checkbox" class="docs" id="tit3">
-									<label for="tit3" class="docSectionHeader">Working with Sensors</label>
-									<ul class="subsections">
+									<label for="tit3" class="docSectionHeader">The Scope</label>
+									<ul id="ScopeDocs" class="subsections">
 									</ul>
-								</li>-->
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit4">
+									<label for="tit4" class="docSectionHeader">OSC Server</label>
+									<ul id="OSCServerDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit5">
+									<label for="tit5" class="docSectionHeader">OSC Client</label>
+									<ul id="OSCClientDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit6">
+									<label for="tit6" class="docSectionHeader">OSC Message Factory</label>
+									<ul id="OSCMessageFactoryDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit7">
+									<label for="tit7" class="docSectionHeader">UDP Server</label>
+									<ul id="UdpServerDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit8">
+									<label for="tit8" class="docSectionHeader">UDP Client</label>
+									<ul id="UdpClientDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit9">
+									<label for="tit9" class="docSectionHeader">Midi</label>
+									<ul id="MidiDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit10">
+									<label for="tit10" class="docSectionHeader">Midi Parser</label>
+									<ul id="MidiParserDocs" class="subsections">
+									</ul>
+								</li>
+								<li>
+									<input type="checkbox" class="docs" id="tit11">
+									<label for="tit11" class="docSectionHeader">WriteFile data logging</label>
+									<ul id="WriteFileDocs" class="subsections">
+									</ul>
+								</li>
 							</ul>
 				       </div><!-- Xenomai --> 
 				    </div><!-- end Doc tab -->
