tweaks to BelaContext doxygen

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -150,7 +150,7 @@
 
 								<table class="tabTable">
 									<tr>
-										<td>Buffer size (audio samples):</td>
+										<td>Block size (audio frames):</td>
 										<td><select id="buffer-size" class="settingsManager small" data-func="setCLArg" data-key="-p">
 											<option value="2">2</option>
 											<option value="4">4</option>
