add basic key shortcuts

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -535,6 +535,7 @@
 		<script src="js/ace/ext-language_tools.js"></script>
 		<script src="socket.io/socket.io.js"></script>
 		<script src="js/jquery.js"></script>
+		<script src="js/keypress.js"></script>
 		<script src="js/pd-fileutils.js"></script>
 		<script src="js/goldenlayout.js"></script>
 		<script src="js/polyfill.js"></script>
