open docs when icon clicked or cmd+h pushed

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -285,7 +285,7 @@
 									</tr>
 									
 									<tr>
-								  		<td>Auto-open documentation:</td>
+								  		<td>Highlight Bela keywords:</td>
 								  		<td><input type="checkbox" id="autoDocs" class="settingsManager" data-func="setIDESetting" data-key="autoDocs" value="1" ></td>
 									</tr>
 
