scope better FFT zooming

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -15,6 +15,8 @@
 				<button id="oneShot" style="display:none;">one-shot</button>
 				<a href="" download="scope" id="saveCanvas"><button>Save Image</button></a>
 				<a href="" download="scopeData.csv" id="saveCanvasData"><button>Export Data</button></a>
+				<span id="scopeMouseX" class="scopeMouse"></span>
+				<span id="scopeMouseY" class="scopeMouse"></span>
 			</div>
 			<canvas id="scope"></canvas>
 			<canvas id="scopeBG"></canvas>
