scope: added one-shot mode

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -144,8 +144,12 @@
 						<table>
 							<tbody>
 								<tr>
+									<td>One-Shot:</td>
+									<td><button id="oneshotButton" class="scopeControls" data-key="scopeOneShot">one-shot</button></td>
+								</tr>
+								<tr>
 									<td>Pause Plotting:</td>
-									<td><button id="pauseButton" class="scopeControls" data-key="scopePause">Pause</button></td>
+									<td><button id="pauseButton" class="scopeControls" data-key="scopePause">pause</button></td>
 								</tr>
 								<tr>
 									<td>Save Image:</td>
