--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -195,6 +195,34 @@
 					</div>
 				</div>
 				
+				<div id="sliderColumn" class="cpColumn">
+					<div id="scopeSlider0" class="sliderView">
+						<table>
+							<tbody>
+								<tr>
+									<td>Min:</td>
+									<td>
+										<input class="sliderView" data-key="min" data-slider="0" type="number" value="0" step="0.01"></input>
+									</td>
+								</tr>
+								<tr>
+									<td>Max:</td>
+									<td>
+										<input class="sliderView" data-key="max" data-slider="0" type="number" value="1" step="0.01"></input>
+									</td>
+								</tr>
+								<tr>
+									<td>Step:</td>
+									<td>
+										<input class="sliderView" data-key="step" data-slider="0" type="number" value="0.01" step="0.001"></input>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<input class="sliderView" data-key="value" data-slider="0" type="range" value="0" min="0" max="1" step="0.01"></input>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 
