--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -220,6 +220,7 @@
 							</tbody>
 						</table>
 						<input class="sliderView" data-key="value" data-slider="0" type="range" value="0" min="0" max="1" step="0.01"></input>
+						<input class="sliderView" data-key="value" data-slider="0" type="number" value="0" step="0.01"></input>
 					</div>
 				</div>
 				
