scope: added scope status indicator to show when the scope has triggered (sorta closes #73)

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -16,7 +16,7 @@
 				<span id="scope-cpu">cpu:</span>
 				<span id="scopeMouseX">x:</span>
 				<span id="scopeMouseY">y:</span>
-				<span id="scopeStatus"></span>
+				<span id="scopeStatus" class="scope-status-waiting">waiting</span>
 			</div>
 			<canvas id="scope"></canvas>
 			<canvas id="scopeBG"></canvas>
