--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -66,8 +66,8 @@
 								<tr>
 									<td>Hold Off (ms):</td>
 									<td>
-										<input  class="scopeControls" data-key="holdOff" type="range" min="0" max="100" value="20" step="0.1"></input>
-										<input class="scopeControls" data-key="holdOff" type="number" value="20" step="0.1"></input>
+										<input  class="scopeControls" data-key="holdOff" type="range" min="0" max="1000" value="20" step="1"></input>
+										<input class="scopeControls" data-key="holdOff" type="number" value="20" step="1"></input>
 									</td>
 								</tr>
 							</tbody>
@@ -135,8 +135,26 @@
 											<option value="1024">1024</option>
 											<option value="2048">2048</option>
 											<option value="4096">4096</option>
-											<option value="8192">8192</option>
-											<option value="16384">16384</option>
+											<!-- TODO: these are broken? <option value="8192">8192</option>
+											<option value="16384">16384</option> -->
+										</select>
+									</td>
+								</tr>
+								<tr>
+									<td>X-Axis:</td>
+									<td>
+										<select class="scopeControls" data-key="FFTXAxis">
+											<option value="0" selected>Linear</option>
+											<option value="1">Logarithmic</option>
+										</select>
+									</td>
+								</tr>
+								<tr>
+									<td>Y-Axis:</td>
+									<td>
+										<select class="scopeControls" data-key="FFTYAxis">
+											<option value="0" selected>Normalised</option>
+											<option value="1">Decibels</option>
 										</select>
 									</td>
 								</tr>
