Scope fixed FFT allocation and up to 32768 samples FFT

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -135,8 +135,9 @@
 											<option value="1024">1024</option>
 											<option value="2048">2048</option>
 											<option value="4096">4096</option>
-											<!-- TODO: these are broken? <option value="8192">8192</option>
-											<option value="16384">16384</option> -->
+											<option value="8192">8192</option>
+											<option value="16384">16384</option>
+											<option value="32768">32768</option>
 										</select>
 									</td>
 								</tr>
