scope: add option to turn off interpolation when zoomed

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -116,6 +116,15 @@
 									</td>
 								</tr>
 								<tr>
+									<td>Interpolation:</td>
+									<td>
+										<select class="scopeControls" data-key="interpolation">
+											<option value="0" selected>Linear</option>
+											<option value="1">None</option>
+										</select>
+									</td>
+								</tr>
+								<tr>
 									<td>One-Shot:</td>
 									<td><button id="oneshotButton" class="scopeControls" data-key="scopeOneShot">one-shot</button></td>
 								</tr>
