scope: added settable titles to sliders, and added doxygen docs for slider

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -232,6 +232,7 @@
 				
 				<div id="sliderColumn" class="cpColumn">
 					<div id="scopeSlider0" class="sliderView">
+						<h1>Slider</h1>
 						<table>
 							<tbody>
 								<tr>
