scope: stop storing browser settings in OSC format

--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -33,7 +33,7 @@
 									<td>Mode:</td>
 									<td>
 										<select class="scopeControls" data-key="plotMode">
-											<option value="0" selected>Normal</option>
+											<option value="0" selected>Time-Domain</option>
 											<option value="1">FFT</option>
 										</select>
 									</td>
