more efficient mode switch detector, with live count on toolbar (closes #92)

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -492,6 +492,7 @@
 						<span class="status-text" style="display:none" >Field 1</span> 
 						<span id="ide-cpu" class="status-text"></span>
 						<span id="bela-cpu" class="status-text"></span>
+						<span id="msw-cpu" class="status-text" title="audio-thread modeswitches"></span>
 					</div>
 
 					<!-- This is the image that signifies the status of syntax checking -->
