--- a/ide/IDE/public/scope/index.html
+++ b/ide/IDE/public/scope/index.html
@@ -206,17 +206,17 @@
 						<table>
 							<tbody>
 								<tr>
-									<td>Amplitude:</td>
+									<td>Attenuation:</td>
 									<td>
-										<input class="channelView" data-key="yAmplitude" data-channel="0" type="range" min="0" max="2" value="1" step="0.01">
-										<input class="channelView" data-key="yAmplitude" data-channel="0" type="number" value="1" step="0.1"></input>
+										<input class="channelView" data-key="yAmplitude" data-channel="0" type="range" min="0" max="100" value="1" step="0.01">
+										<input class="channelView" data-key="yAmplitude" data-channel="0" type="number" value="1" step="0.01"></input>
 									</td>
 								</tr>
 								<tr>
 									<td>Offset:</td>
 									<td>
 										<input class="channelView" data-key="yOffset" data-channel="0" type="range" min="-1" max="1" value="0" step="0.01"></input>
-										<input class="channelView" data-key="yOffset" data-channel="0" type="number" value="0" step="0.1"></input>
+										<input class="channelView" data-key="yOffset" data-channel="0" type="number" value="0" step="0.01"></input>
 									</td>
 								</tr>
 								<tr>
