added option to view hidden files in IDE (closes #127)

--- a/ide/IDE/public/index.html
+++ b/ide/IDE/public/index.html
@@ -288,6 +288,11 @@
 								  		<td>Highlight Bela keywords:</td>
 								  		<td><input type="checkbox" id="autoDocs" class="settingsManager" data-func="setIDESetting" data-key="autoDocs" value="1" ></td>
 									</tr>
+									
+									<tr>
+								  		<td>View hidden files:</td>
+								  		<td><input type="checkbox" id="viewHiddenFiles" class="settingsManager" data-func="setIDESetting" data-key="viewHiddenFiles" value="1" ></td>
+									</tr>
 
 									<!--<tr>
 										<td>Verbose debugger output:</td>
