--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -145,7 +145,7 @@
 				        <div id="settingsTab" class="tabContent">
 				        	<div class="settingsManager-parent">
 								<!-- TAB 1: PROJECT SETTINGS -->
-								<h1>Project Settings</h1>
+								<h1>Project Settings </h1>
 								<button class="settingsManager settings-button" data-func="restoreDefaultCLArgs">Restore defaults</button>
 
 								<table class="tabTable">
@@ -316,7 +316,7 @@
 								
 								<table>
 
-								<h1 class="tabTitle">IDE Settings</h1>
+								<h1 class="tabTitle">IDE Settings </h1>
 								<button class="settingsManager settings-button" data-func="restoreDefaultIDESettings">restore defaults</button></br>
 
 								<table class="tabTable">
@@ -347,7 +347,7 @@
 									</tr>
 
 									<tr>
-								  		<td>Delete old console records:</td>
+								  		<td>Never delete console logs:</td>
 								  		<td><input type="checkbox" id="consoleDelete" class="settingsManager" data-func="setIDESetting" data-key="consoleDelete" value="1" ></td>
 									</tr>
 									
