IDE: add button to copy compiler errors to clipboard (closes #48)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -555,6 +555,7 @@
 		<script src="js/pd-fileutils.js"></script>
 		<script src="js/goldenlayout.js"></script>
 		<script src="js/polyfill.js"></script>
+		<script src="js/clipboard.min.js"></script>
 		<script src="js/bundle.js"></script>
 		<script>
 			TokenIterator = require("ace/token_iterator").TokenIterator;
