zip pd files and send ajax request
(cherry picked from commit 8b4cf8438b175a21577b1b4cedd9fc00adb32421)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -126,6 +126,7 @@
 								</div>
 							</div>				           
 				           </br></br></br>
+					<button id="heavyUpload">Heavy</button>
 				        </div> 
 				    </div><!-- end File Explorer tab -->
 				    
