use Pixi.js for webGL rendering instead of canvas BROKEN: THIS IS A MANUAL STEP-BY-STEP MERGE
(cherry picked from commit ba068459de540294a236d5e4efca21691e2da446)

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -20,7 +20,7 @@
 				<span id="scopeStatus" class="scope-status-waiting">waiting</span>
 			</div>
 			<div id="inactive-overlay"></div>
-			<canvas id="scope"></canvas>
+<!--			<canvas id="scope"></canvas> -->
 			<canvas id="scopeBG"></canvas>
 			<div id="controlPanel" class="hidden scopeControls-parent channelView-parent">
 				<div id="mainColumn" class="cpColumn">
@@ -266,6 +266,7 @@
 		<script src="js/jquery.js"></script>
 		<script src="../socket.io/socket.io.js"></script>
 		<script src="js/polyfill.js"></script>
+		<script src="js/pixi.js"></script>
 		<script src="js/bundle.js"></script>
 		
 	</body>
