--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -20,7 +20,6 @@
 				<span id="scopeStatus" class="scope-status-waiting">waiting</span>
 			</div>
 			<div id="inactive-overlay"></div>
-<!--			<canvas id="scope"></canvas> -->
 			<canvas id="scopeBG"></canvas>
 			<div id="controlPanel" class="hidden scopeControls-parent channelView-parent">
 				<div id="mainColumn" class="cpColumn">
@@ -213,6 +212,13 @@
 									<td>
 										<input class="channelView" data-key="yOffset" data-channel="0" type="range" min="-1" max="1" value="0" step="0.01"></input>
 										<input class="channelView" data-key="yOffset" data-channel="0" type="number" value="0" step="0.01"></input>
+									</td>
+								</tr>
+								<tr>
+									<td>Weight:</td>
+									<td>
+										<input class="channelView" data-key="lineWeight" data-channel="0" type="range" value="1.5" min="1" max="10" step="0.1"></input>
+										<input class="channelView" data-key="lineWeight" data-channel="0" type="number" value="1.5" min="1" max="10" step="0.1"></input>
 									</td>
 								</tr>
 								<tr>
