scope: bi-directional trigger (#116) BROKEN: THIS IS A MANUAL STEP-BY-STEP MERGE
(cherry picked from commit 70e823da38983f2ceb29dade827f7037f6c0bdba)

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -104,6 +104,7 @@
 										<select class="scopeControls" data-key="triggerDir">
 											<option value="0" selected>Positive</option>
 											<option value="1">Negative</option>
+											<option value="2">Bi-Directional</option>
 										</select>
 									</td>
 								</tr>
