Documentation for OSCSender and OSCReceiver

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -436,49 +436,31 @@
 								</li>
 								<li>
 									<input type="checkbox" class="docs" id="tit4">
-									<label for="tit4" class="docSectionHeader">OSC Server</label>
-									<ul id="OSCServerDocs" class="subsections">
+									<label for="tit4" class="docSectionHeader">OSC Receiver</label>
+									<ul id="OSCReceiverDocs" class="subsections">
 									</ul>
 								</li>
 								<li>
 									<input type="checkbox" class="docs" id="tit5">
-									<label for="tit5" class="docSectionHeader">OSC Client</label>
-									<ul id="OSCClientDocs" class="subsections">
+									<label for="tit5" class="docSectionHeader">OSC Sender</label>
+									<ul id="OSCSenderDocs" class="subsections">
 									</ul>
 								</li>
 								<li>
 									<input type="checkbox" class="docs" id="tit6">
-									<label for="tit6" class="docSectionHeader">OSC Message Factory</label>
-									<ul id="OSCMessageFactoryDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit7">
-									<label for="tit7" class="docSectionHeader">UDP Server</label>
-									<ul id="UdpServerDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit8">
-									<label for="tit8" class="docSectionHeader">UDP Client</label>
-									<ul id="UdpClientDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit9">
-									<label for="tit9" class="docSectionHeader">Midi</label>
+									<label for="tit6" class="docSectionHeader">Midi</label>
 									<ul id="MidiDocs" class="subsections">
 									</ul>
 								</li>
 								<li>
-									<input type="checkbox" class="docs" id="tit10">
-									<label for="tit10" class="docSectionHeader">Midi Parser</label>
+									<input type="checkbox" class="docs" id="tit7">
+									<label for="tit7" class="docSectionHeader">Midi Parser</label>
 									<ul id="MidiParserDocs" class="subsections">
 									</ul>
 								</li>
 								<li>
-									<input type="checkbox" class="docs" id="tit11">
-									<label for="tit11" class="docSectionHeader">WriteFile data logging</label>
+									<input type="checkbox" class="docs" id="tit8">
+									<label for="tit8" class="docSectionHeader">WriteFile data logging</label>
 									<ul id="WriteFileDocs" class="subsections">
 									</ul>
 								</li>
