IDE: remove appropriate settings from the browser when running on the Mini (closes #420)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -243,9 +243,9 @@
 
 								</table>
 								
-								<h1 class="tabTitle">Capelet Settings</h1>
+								<h1 class="tabTitle capelet-settings">Capelet Settings</h1>
 								
-								<table class="tabTable">
+								<table class="tabTable capelet-settings">
 									<tr>
 										<td>Multiplexer Capelet:</td>
 										<td><select id="multiplexer-capelet" class="settingsManager small" data-func="setCLArg" data-key="-X">
