IDE: add option for disabling LED on mini (closes #202)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -232,6 +232,11 @@
 									</tr>
 
 									<tr>
+										<td>Disable LED:</td> 
+										<td><input type="checkbox" id="disable-led" class="settingsManager" data-func="setCLArg" data-key="--disable-led" value="0"></td>
+									</tr>
+
+									<tr>
 										<td>User Command Line Arguments:</td>
 										<td><input id="user-clargs" class="settingsManager" data-func="setCLArg" type="text" data-key="user"></input></td>
 									</tr>
