IDE: port BelaMini pin diagram and display it when running on the Mini (closes #379)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -397,7 +397,7 @@
 				       <label for="tab-4"><span id="gpio-ref" title="Pin Diagram" /></label>
 				       <div class="tabContent">
 				            <h1>Pin Diagram</h1>
-							<object data="diagram.html"> 
+							<object data="diagram.html" id="pin_diagram_object"> 
     							Your browser doesn’t support the object tag. 
 							</object>
 				       </div> 
