--- a/IDE/public/diagram_mini.html
+++ b/IDE/public/diagram_mini.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="diagramStyle.css" />
     <link rel="stylesheet" type="text/css" href="tooltipster.css" />
 
-    <script src="./js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
     <!-- tooltipster: for tooltippin -->
     <script type="text/javascript" src="js/diagram/jquery.tooltipster.min.js"></script>
     <!-- Raphael: for drawing -->
