FEAT: Latest IDE front-end refactor

--- a/ide-redesign/index.html
+++ b/ide-redesign/index.html
@@ -510,7 +510,10 @@
 		<div class="lower">
 
 			<div class="toolbar">
-				<div class="start-stop"><span class="start run" data="Run project"></span><span class="start stop" data="Stop project"></span></div>
+				<div class="start-stop">
+          <span class="start run" data="Run project"></span>
+          <span class="start stop" data="Stop project"></span>
+        </div>
 				<div class="tool-text st-st"></div>
 				<div class="toolbar-functions">
 					<span class="tab-button" data="New tab"></span>
