--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -28,20 +28,18 @@
         </div>
 
         <div class="start-stop">
-          <span class="control-button-runstop start run" data="Run project" id="run" data-toolbar-run data-func="run"></span>
-          <span class="control-button-runstop start stop" data="Stop project" data-toolbar-stop id="stop" data-fun="stop"></span>
+          <span class="control-button-runstop start run toolBar" data="Run project" id="run" data-toolbar-run data-func="run"></span>
+          <span class="control-button-runstop start stop toolBar" data="Stop project" data-toolbar-stop id="stop" data-func="stop"></span>
         </div>
         <div id="control-text-1" class="tool-text st-st" data-toolbar-controltext1></div>
 
         <div class="toolbar-functions">
-					<!-- <span class="tab-button" data="New tab"></span> -->
-					<span class="scope-button" data="Launch scope"></span>
-					<!-- <span class="drag-button" data="Resize console"></span> -->
-					<!-- <span class="console-button" data="Clear console"></span> -->
-          <span id="control-text-2" class="tool-text st-st control-text" data-toolbar-controltext2></span>
+					<span class="scope-button toolBar" data-toolbar-scope data="Launch scope"></span>
+					<span class="console-button toolBar" data="Clear console" data-func="clearConsole"></span>
 				</div>
-				<div class="tool-text other"></div>
-        <span id="control-text-3" class="control-text tool-text" data-toolbar-controltext3></span>
+        <div id="control-text-2" class="tool-text st-st" data-toolbar-controltext2></div>
+				<!-- <div class="tool-text other"></div> -->
+        <!-- <span id="control-text-3" class="control-text tool-text" data-toolbar-controltext3></span> -->
 				<!-- <div class="system-status-text bela">Bela: --%</div> -->
 				<div class="system-status-text cpu" data-toolbar-bela-cpu>CPU: --%</div>
 				<div class="system-status-text msw" data-toolbar-cpu-msw>MSW: --</div>
